--- a/pom.xml
+++ b/pom.xml
@@ -6,12 +6,26 @@
 
     <groupId>org.example</groupId>
     <artifactId>Java-Kl3</artifactId>
+    <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
+    <modules>
+        <module>dhondt</module>
+        <module>randomAccess</module>
+        <module>randomAccessII</module>
+    </modules>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
+
+    <dependencies>
+        <dependency>
+            <groupId>org.assertj</groupId>
+            <artifactId>assertj-core</artifactId>
+            <version>3.20.2</version>
+        </dependency>
+    </dependencies>
 
 </project>
