randomAccessII fertig | Hotel init

--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
         <module>dhondt</module>
         <module>randomAccess</module>
         <module>randomAccessII</module>
+        <module>hotel</module>
     </modules>
 
     <properties>
