DeleteLines & Pipe fertig

--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <module>randomAccess</module>
         <module>randomAccessII</module>
         <module>hotel</module>
+        <module>DeleteLines_Pipe</module>
     </modules>
 
     <properties>
